--- a/coaGenesys/force-app/main/default/lwc/verifyProvider/verifyProvider.css
+++ b/coaGenesys/force-app/main/default/lwc/verifyProvider/verifyProvider.css
@@ -4,8 +4,8 @@
 }
 
 .provider-modal-container {
-    width: 460px !important;
-    max-width: 460px !important;
+    width: 500px !important;
+    max-width: 500px !important;
 }
 
 .slds-grid_align-spread > .slds-col {
